# Senior-Design-2025

./: .gitignore  DSA330_Nutrition_TextRegression.ipynb  Dockerfile  MIGRATION.md  Makefile  NOTEBOOK_README.md  NutriLabelAI_ML_Draft.ipynb  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  dsa330.py  nutrilabel.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init_schema_with_pgvector.py
app/: main.py
app/api/: dishes_router.py  feedback_router.py  label_router.py
app/core/: settings.py
app/db/: models.py  session.py
app/schemas/: label.py
app/services/: confidence_service.py  mixture_service.py  rebalance_service.py  retrieval_service.py  scaling_service.py
flutter_stuff_rashed/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
ml_models/: cuisine_encoder.pkl  linear_regression_model.pkl  model_metadata.pkl  nearest_neighbors_model.pkl  neural_network_model.pth  target_scaler.pkl
mobile/: API_INTEGRATION_SUMMARY.md  App.tsx  BACKEND_INTEGRATION_GUIDE.md  COMPONENT_FLOW.md  EXPLORE_TAB_IMPLEMENTATION.md  FILE_STRUCTURE.md  HISTORY_TAB_IMPLEMENTATION.md  LABEL_TAB_IMPLEMENTATION.md  NAVIGATION_DIAGRAM.txt  NAVIGATION_README.md  PROFILE_TAB_IMPLEMENTATION.md  QUICK_START.md  README.md  REUSABLE_COMPONENTS.md  SETUP.md  app.json  package-lock.json  package.json
scripts/: README_PREPROCESSING.md  check_dishes.py  embed_dishes.py  ingest_seed.py  insert_test_data.py  inspect_audit_logs.py  inspect_db.py  query_db.py  reduce_dataset.py
(+124 files in other folders)
