[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "nutrition-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary,pool]>=3.2",
  "pgvector>=0.2.5",
  "python-dotenv>=1.0",
  "numpy>=1.26",
  "scipy>=1.12",
  "sentence-transformers>=3.0",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
